[package]
name = "image-effect"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.93"
base64 = "0.22.1"
image = "0.25.2"
web-sys = { version = "0.3.70", features = ["console"] }
